Removed instagram text and fixed spacing around logos

--- a/src/components/_homepage/testimonials.module.scss
+++ b/src/components/_homepage/testimonials.module.scss
@@ -16,7 +16,6 @@
   background-color: $color-darkgreen;
   position: relative;
   padding: 80px 0;
-  margin-bottom: 80px;
 
   &::before {
     content: '';
